# gitar

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: guitar.rs  interval.rs  key.rs  lib.rs  luthier.rs  main.rs  note.rs
