[package]
name = "gitar"
version = "0.1.0"
authors = ["Thomas Freeman <tomclaudefreeman@gmail.com>"]
edition = "2018"
description = "A command-line tool for programmer-guitarists."
repository = "https://github.com/thfm/gitar"
readme = "README.md"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
arrayvec = "0.5"
minstrel = "0.3"
nom = "5.1"
structopt = "0.3"
strum = "0.18"
strum_macros = "0.18"
